--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -22,7 +22,7 @@
   </div>
 <% end %>
 
-<table class="table table-hover table-striped" id="table-to-color">
+<table class="table table-to-color">
   <thead class=thead-dark>
   <tr>
     <th>
