--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -52,7 +52,7 @@
       <div class="clearfix"></div>
       <span id="number">
         <h2>
-          <%= '#' + @invoice.id.to_s %>
+          <%= '#' + @invoice.display_number.to_s %>
         </h2>
       </span>
       <div class="clearfix"></div>
