--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 
 .content {
-  font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif, serif;
+  font-family: Helvetica, Arial, Sans-Serif, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 98%;
@@ -80,8 +80,14 @@
     right: 3%;
     top: 3%;
 
-    span{
+    span {
       font-size: 2vw;
+    }
+  }
+
+  form {
+    h3 {
+      margin: auto 1% auto 1%;
     }
   }
 
@@ -101,6 +107,17 @@
 
       td {
         width: 5%;
+
+        img {
+          margin: 0;
+        }
+
+        #status-project {
+          text-align: center;
+          font-weight: bold;
+          border: 2px solid black;
+          border-radius: 2px;
+        }
       }
     }
 
@@ -130,7 +147,7 @@
 
       .project-info {
         text-align: left;
-        width: 70%;
+        width: 80%;
       }
 
       .table.totals-table {
@@ -165,6 +182,10 @@
     box-shadow: 10px 0 40px 2px rgba(0, 0, 0, 0.37);
     -webkit-box-shadow: 10px 0 40px 2px rgba(0, 0, 0, 0.37);
 
+    .small-column {
+      width: 15%
+    }
+
     .emptyTable {
       text-align: center;
     }
@@ -195,6 +216,7 @@
 
     tr {
       cursor: pointer;
+
       th, td {
         vertical-align: middle;
         padding: 0.65rem;
@@ -306,12 +328,12 @@
 
 @media all and (max-width: 1024px) {
 
-  .table  {
+  .table {
     display: block;
     overflow-x: auto;
     white-space: nowrap;
   }
-  .content .project-content .panel  {
+  .content .project-content .panel {
     width: 98%;
   }
 }
@@ -332,6 +354,6 @@
 }
 
 .select2-container--bootstrap .select2-results__option[aria-disabled=true] {
-  display: none!important;
+  display: none !important;
 }
 
