--- a/app/views/extras/_form.html.erb
+++ b/app/views/extras/_form.html.erb
@@ -20,7 +20,7 @@
 
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
         <%= form.label t('category') %>
-        <%= form.select :category, Extra.distinct.pluck(:category), {:include_blank => true}, {required: true, class: 'form-control', id: 'category_select_extra_line'} %>
+        <%= form.select :category, Extra.distinct.pluck(:category), {:include_blank => true}, {required: true, class: 'form-control', id: 'extra_form_category'} %>
       </div>
     </div>
     <div class="form-row">
