--- a/app/views/project_extra_lines/_form.html.erb
+++ b/app/views/project_extra_lines/_form.html.erb
@@ -14,12 +14,12 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('project') %>
-        <%= form.collection_select :project_id, Project.all, :id, :name, {:include_blank => true}, {:required => true, class: 'form-control', id: 'project_extra_edit_select'} %>
+        <%= form.collection_select :project_id, Project.all, :id, :name, {:include_blank => true}, {:required => true, class: 'form-control', id: 'extra_line_form_project'} %>
       </div>
 
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('category') %>
-        <%= form.collection_select :id, Extra.all, :id, :category, {:include_blank => true}, {required: true, class: 'form-control', id: 'category_select_extra_line'} %>
+        <%= form.select :id, Extra.distinct.pluck(:category), {:include_blank => true}, {required: true, class: 'form-control', id: 'extra_line_form_category'} %>
       </div>
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
