--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
 <% end %>
-<table class="table table-hover table-striped" id="table-to-color">
+<table class="table table-to-color">
   <thead class=thead-dark>
   <tr>
     <th class="center-cell ">
@@ -57,7 +57,7 @@
       <td class="center-cell">
         <% if ware.project %>
           <% if current_user.isAdmin %>
-            <%= (link_to '#' + ware.project.id.to_s, project_path(ware.project.id)) %>
+            <%= (link_to '#' + ware.project.id.to_s, project_path(ware.project.id), class: 'btn btn-info')%>
           <% else %>
             <%= '#' + ware.project.id.to_s %>
           <% end %>
